--- a/app/assets/stylesheets/_structure/_main.scss
+++ b/app/assets/stylesheets/_structure/_main.scss
@@ -1,5 +1,5 @@
 .main {
-  flex: 1;
+  @include flex(1);
   padding-bottom: 3rem;
 }
 
