--- a/app/assets/stylesheets/_structure/_sidebar.scss
+++ b/app/assets/stylesheets/_structure/_sidebar.scss
@@ -3,15 +3,14 @@
   width: 300px;
   box-sizing: border-box;
   padding: 0 3.75rem 0 5rem;
-  flex: 0 0 300px;
-  order: -1;
+  @include flex(0 0 300px);
+  @include order(-1);
 }
 
 .inner-sidebar {
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
-
 
   .logo {
     border-bottom: 1px solid rgba(#fff, .1);
@@ -35,12 +34,12 @@
         height: 40px;
         -webkit-transition: -webkit-transform .3s ease-in-out;
         margin-right: .25rem;
+        vertical-align: bottom;
       }
     &:hover i {
       -webkit-transform: rotate(-25deg);
     }
   }
-
 
 .stack {
   padding: 2.25rem 0;
@@ -65,6 +64,7 @@
 
         .server {
           position: relative;
+
           a {
             color: rgba(#fff, .6);
             font-size: .875rem;
@@ -75,6 +75,7 @@
                 color: #fff;
               }
           }
+
           &.selected a {
             color: #fff;
               &:before {
@@ -88,4 +89,5 @@
                 margin-top: -.65em;
               }
           }
-        }
+
+      }
